<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/button1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SplashScreen">

    <ImageView
        android:id="@+id/logoLogin"
        style="@style/ImageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:contentDescription="@string/descriptionLogo"
        android:src="@drawable/logopeq"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextTitlePri"
        android:layout_width="344dp"
        android:layout_height="46dp"
        android:fontFamily="@font/libert"
        android:text="@string/login"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/User"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin"
        app:layout_constraintVertical_bias="0.557" />

    <EditText
        android:id="@+id/User"
        style="@style/TextViewUser"
        android:drawableStart="@drawable/vector_person"
        android:hint="@string/user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin"
        app:layout_constraintVertical_bias="0.187" />

    <EditText
        android:id="@+id/Pass"
        style="@style/TextViewUser"
        android:drawableStart="@drawable/vector_lock"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/User"
        app:layout_constraintVertical_bias="0.04"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/forgotPassword"
        style="@style/forgotPassword"
        android:fontFamily="@font/libertbold"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.734" />

    <Button
        android:id="@+id/btnEntrar"
        style="@style/bottons"
        android:text="@string/login"
        android:fontFamily="@font/libertbold"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Pass"
        app:layout_constraintVertical_bias="0.182" />

    <Button
        android:id="@+id/btnRegistrar"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="247dp"
        android:layout_height="53dp"
        android:text="@string/create_new_account"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:fontFamily="@font/libertbold"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin"
        app:layout_constraintVertical_bias="0.828"
        app:strokeColor="@color/principal" />


</androidx.constraintlayout.widget.ConstraintLayout>