<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Editar">

    <ImageView
        android:id="@+id/logoLogin"
        style="@style/ImageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:contentDescription="@string/descriptionLogo"
        android:src="@drawable/logopeq"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />


    <TextView
        android:id="@+id/textView"
        style="@style/TextTitlePri"
        android:layout_width="344dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/libert"
        android:text="Editar usuario"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/EdiUser"
        style="@style/TextViewUser"
        android:layout_marginTop="16dp"
        android:hint="@string/user"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.025" />
    <EditText
        android:id="@+id/EdiPass"
        style="@style/TextViewUser"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EdiUser" />


    <EditText
        android:id="@+id/EdiNombre"
        style="@style/TextViewUser"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EdiPass" />

    <EditText
        android:id="@+id/EdiApellido"
        style="@style/TextViewUser"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btnEdiActualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EdiNombre"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/btnEdiActualizar"
        style="@style/bottons"
        android:text="Actualizar"
        android:fontFamily="@font/libertbold"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.836" />

    <Button
        android:id="@+id/btnEdiCancelar"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="247dp"
        android:layout_height="53dp"
        android:fontFamily="@font/libertbold"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/cancelar"
        app:strokeColor="@color/principal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEdiActualizar" />

</androidx.constraintlayout.widget.ConstraintLayout>