<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SplashScreen">


    <ImageView
        android:id="@+id/logoLogin"
        style="@style/ImageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="117dp"
        android:contentDescription="@string/descriptionLogo"
        android:src="@drawable/logopeq"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextTitlePri"
        android:layout_width="344dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/libert"
        android:text="Crear cuenta"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/RegUser"
        style="@style/TextViewUser"
        android:layout_marginTop="16dp"
        android:hint="@string/user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.025" />
    <EditText
        android:id="@+id/RegPass"
        style="@style/TextViewUser"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegUser" />


    <EditText
        android:id="@+id/RegNombre"
        style="@style/TextViewUser"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegPass" />

    <EditText
        android:id="@+id/RegApellido"
        style="@style/TextViewUser"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/btnRegRegistrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegNombre"
        app:layout_constraintVertical_bias="0.0" />


    <Button
        android:id="@+id/btnRegRegistrar"
        style="@style/bottons"
        android:fontFamily="@font/libertbold"
        android:text="Registrarse"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/btnRegCancelar"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="247dp"
        android:layout_height="53dp"
        android:fontFamily="@font/libertbold"
        android:text="Regresar"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin"
        app:layout_constraintVertical_bias="0.907"
        app:strokeColor="@color/principal" />

</androidx.constraintlayout.widget.ConstraintLayout>